--- a/templates/simple_game/Makefile.Android.linux
+++ b/templates/simple_game/Makefile.Android.linux
@@ -2,7 +2,10 @@
 #
 #   raylib makefile for Android project (APK building)
 #
-#   Copyright (c) 2017 Ramon Santamaria (@raysan5)
+#   NOTE: Ported by Jean-Sébastien Lebarbier (@jseb) to *nix platform.
+# 	  For comments, you can contact me: raylib(at)finiderire.com
+#
+#   Copyright (c) 2017-2021 Ramon Santamaria (@raysan5)
 #
 #   This software is provided "as-is", without any express or implied warranty. In no event
 #   will the authors be held liable for any damages arising from the use of this software.
@@ -21,9 +24,6 @@
 #
 #**************************************************************************************************
 
-# Note : ported by Jean-Sébastien Lebarbier (@jseb) to *nix by using the Ramon Santamaria ms-windows version.
-# 	 For comments, you can contact me : raylib(at)finiderire.com
-
 # debug : adb logcat *:W | grep -i raylib
 
 # Define required raylib variables
@@ -31,55 +31,53 @@ PLATFORM               ?= PLATFORM_ANDROID
 RAYLIB_PATH            ?= ../../
 
 # Define Android architecture (armeabi-v7a, arm64-v8a, x86, x86-64) and API version
+# Starting in 2019 using ARM64 is mandatory for published apps,
+# Starting on August 2020, minimum required target API is Android 10 (API level 29)
 ANDROID_ARCH           ?= ARM64
 
 ifeq ($(ANDROID_ARCH),ARM)
     ANDROID_ARCH_NAME   = armeabi-v7a
-    # [JSEB] i have added ANDROID_TOOLCHAIN_LIBS for linking
+    # @jseb: Added ANDROID_TOOLCHAIN_LIBS for linking
     ANDROID_TOOLCHAIN_LIBS = arm-linux-androideabi
 endif
 ifeq ($(ANDROID_ARCH),ARM64)
     ANDROID_ARCH_NAME   = arm64-v8a
-    # [JSEB] i have added ANDROID_TOOLCHAIN_LIBS for linking
+    # @jseb: Added ANDROID_TOOLCHAIN_LIBS for linking
     ANDROID_TOOLCHAIN_LIBS = aarch64-linux-android
 endif
 
 # Required path variables
-# no need to define JAVA_HOME , JAVA_BIN in linux environment (binaries are in $PATH)
+# NOTE: No need to define JAVA_HOME, JAVA_BIN in linux environment (binaries are in $PATH)
 #JAVA_HOME              ?= C:/JavaJDK/
 #JAVA_BIN               ?= $(JAVA_HOME)/bin/
 ANDROID_HOME            ?= /opt/android-sdk
 ANDROID_NDK             ?= /opt/android-ndk
 ANDROID_TOOLCHAIN       ?= $(ANDROID_NDK)/toolchains/llvm/prebuilt/linux-x86_64/
 
-# find the highest version available of build tools
+# Find the highest version available of build tools
 ANDROID_BUILD_TOOLS = $(shell ls -1d $(ANDROID_HOME)/build-tools/* | tail -n 1)/
 # and extracts the API version
 ANDROID_API_VERSION     = $(shell echo $(ANDROID_BUILD_TOOLS) | sed 's/.*\/\([0-9]\+\).*/\1/')
-NATIVE_APP_GLUE         = $(ANDROID_NDK)/sources/android/native_app_glue
+
 
 $(warning  [*] Using $(ANDROID_BUILD_TOOLS) , API version: $(ANDROID_API_VERSION))
 
 # ANDROID_PLATFORM_TOOLS should be in $PATH too with linux (see /etc/profile.d/android* )
-# but anyway, let's define it here
 ANDROID_PLATFORM_TOOLS  = $(ANDROID_HOME)/platform-tools
-
-
-
 
 # Android project configuration variables
 PROJECT_NAME           ?= raylib_game
 PROJECT_LIBRARY_NAME   ?= main
-PROJECT_BUILD_ID ?= android
+PROJECT_BUILD_ID       ?= android
 PROJECT_BUILD_PATH     ?= $(PROJECT_BUILD_ID).$(PROJECT_NAME)
 PROJECT_RESOURCES_PATH ?= resources
 PROJECT_SOURCE_FILES   ?= simple_game.c
+NATIVE_APP_GLUE_PATH    = $(ANDROID_NDK)/sources/android/native_app_glue
 
 # Some source files are placed in directories, when compiling to some 
 # output directory other than source, that directory must pre-exist.
 # Here we get a list of required folders that need to be created on
 # code output folder $(PROJECT_BUILD_PATH)\obj to avoid GCC errors.
-#PROJECT_SOURCE_DIRS = $(sort $(dir $(PROJECT_SOURCE_FILES)))
 PROJECT_SOURCE_DIRS = $(dir $(PROJECT_SOURCE_FILES))
 
 # Android app configuration variables
@@ -139,7 +137,7 @@ CFLAGS += -Wall -Wa,--noexecstack -Wformat -Werror=format-security -no-canonical
 CFLAGS += -DANDROID -DPLATFORM_ANDROID -D__ANDROID_API__=$(ANDROID_API_VERSION)
 
 # Paths containing required header files
-INCLUDE_PATHS = -I. -I$(RAYLIB_PATH)/src -I$(NATIVE_APP_GLUE)
+INCLUDE_PATHS = -I. -I$(RAYLIB_PATH)/src -I$(NATIVE_APP_GLUE_PATH)
 
 # Linker options
 LDFLAGS = -Wl,-soname,lib$(PROJECT_LIBRARY_NAME).so -Wl,--exclude-libs,libatomic.a 
@@ -189,42 +187,13 @@ create_temp_project_dirs:
 	  mkdir -p $(PROJECT_BUILD_PATH)/assets/$(PROJECT_RESOURCES_PATH); \
 	  $(foreach dir, $(PROJECT_SOURCE_DIRS), mkdir -p $(PROJECT_BUILD_PATH)/obj/$(dir) ); \
 	fi
-
-#	if not exist $(PROJECT_BUILD_PATH) mkdir $(PROJECT_BUILD_PATH) 
-#	if not exist $(PROJECT_BUILD_PATH)\obj mkdir $(PROJECT_BUILD_PATH)\obj
-#	if not exist $(PROJECT_BUILD_PATH)\src mkdir $(PROJECT_BUILD_PATH)\src
-#	if not exist $(PROJECT_BUILD_PATH)\src\com mkdir $(PROJECT_BUILD_PATH)\src\com
-#	if not exist $(PROJECT_BUILD_PATH)\src\com\$(APP_COMPANY_NAME) mkdir $(PROJECT_BUILD_PATH)\src\com\$(APP_COMPANY_NAME)
-#	if not exist $(PROJECT_BUILD_PATH)\src\com\$(APP_COMPANY_NAME)\$(APP_PRODUCT_NAME) mkdir $(PROJECT_BUILD_PATH)\src\com\$(APP_COMPANY_NAME)\$(APP_PRODUCT_NAME)
-#	if not exist $(PROJECT_BUILD_PATH)\lib mkdir $(PROJECT_BUILD_PATH)\lib
-#	if not exist $(PROJECT_BUILD_PATH)\lib\$(ANDROID_ARCH_NAME) mkdir $(PROJECT_BUILD_PATH)\lib\$(ANDROID_ARCH_NAME)
-#	if not exist $(PROJECT_BUILD_PATH)\bin mkdir $(PROJECT_BUILD_PATH)\bin
-#	if not exist $(PROJECT_BUILD_PATH)\res mkdir $(PROJECT_BUILD_PATH)\res
-#	if not exist $(PROJECT_BUILD_PATH)\res\drawable-ldpi mkdir $(PROJECT_BUILD_PATH)\res\drawable-ldpi
-#	if not exist $(PROJECT_BUILD_PATH)\res\drawable-mdpi mkdir $(PROJECT_BUILD_PATH)\res\drawable-mdpi
-#	if not exist $(PROJECT_BUILD_PATH)\res\drawable-hdpi mkdir $(PROJECT_BUILD_PATH)\res\drawable-hdpi
-#	if not exist $(PROJECT_BUILD_PATH)\res\values mkdir $(PROJECT_BUILD_PATH)\res\values
-#	if not exist $(PROJECT_BUILD_PATH)\assets mkdir $(PROJECT_BUILD_PATH)\assets
-#	if not exist $(PROJECT_BUILD_PATH)\assets\$(PROJECT_RESOURCES_PATH) mkdir $(PROJECT_BUILD_PATH)\assets\$(PROJECT_RESOURCES_PATH)
-#	if not exist $(PROJECT_BUILD_PATH)\obj\screens mkdir $(PROJECT_BUILD_PATH)\obj\screens
-#	$(foreach dir, $(PROJECT_SOURCE_DIRS), $(call create_dir, $(dir)))
-
-#define create_dir
-#    if not exist $(PROJECT_BUILD_PATH)\obj\$(1) mkdir $(PROJECT_BUILD_PATH)\obj\$(1)
-#endef
     
 # Copy required shared libs for integration into APK
 # NOTE: If using shared libs they are loaded by generated NativeLoader.java
 #
-# FIXME really necessary to copy libraylib.a , which will be put into exe at link step ?
+# FIXME! Really required to copy libraylib.a, which will be put into exe at link step?
 copy_project_required_libs:
 	cp $(RAYLIB_LIB_PATH)/libraylib.* $(PROJECT_BUILD_PATH)/lib/$(ANDROID_ARCH_NAME)
-#ifeq ($(RAYLIB_LIBTYPE),SHARED)
-#	copy /Y $(RAYLIB_LIB_PATH)\libraylib.so $(PROJECT_BUILD_PATH)\lib\$(ANDROID_ARCH_NAME)\libraylib.so 
-#endif
-#ifeq ($(RAYLIB_LIBTYPE),STATIC)
-#	copy /Y $(RAYLIB_LIB_PATH)\libraylib.a $(PROJECT_BUILD_PATH)\lib\$(ANDROID_ARCH_NAME)\libraylib.a 
-#endif
 
 # Copy project required resources: strings.xml, icon.png, assets
 # NOTE: Required strings.xml is generated and game resources are copied to assets folder
@@ -238,18 +207,12 @@ copy_project_resources:
 		  $(APP_LABEL_NAME)\n\
 	       </string>\n\
 	   </resources>" > $(PROJECT_BUILD_PATH)/res/values/strings.xml
-#	copy $(APP_ICON_LDPI) $(PROJECT_BUILD_PATH)\res\drawable-ldpi\icon.png /Y
-#	copy $(APP_ICON_MDPI) $(PROJECT_BUILD_PATH)\res\drawable-mdpi\icon.png /Y
-#	copy $(APP_ICON_HDPI) $(PROJECT_BUILD_PATH)\res\drawable-hdpi\icon.png /Y
-#	@echo ^<?xml version="1.0" encoding="utf-8"^?^> > $(PROJECT_BUILD_PATH)/res/values/strings.xml
-#	@echo ^<resources^>^<string name="app_name"^>$(APP_LABEL_NAME)^</string^>^</resources^> >> $(PROJECT_BUILD_PATH)/res/values/strings.xml
 	@if [ -d $(PROJECT_RESOURCES_PATH) ]; then \
 	    cp -a $(PROJECT_RESOURCES_PATH) $(PROJECT_BUILD_PATH)/assets/; \
-	 else \
+	else \
 	    echo " [*] Project resources path not found: $(PROJECT_RESOURCES_PATH)"; \
-	 fi
+	fi
 	    
-#	if exist $(PROJECT_RESOURCES_PATH) C:\Windows\System32\xcopy $(PROJECT_RESOURCES_PATH) $(PROJECT_BUILD_PATH)\assets\$(PROJECT_RESOURCES_PATH) /Y /E /F
 
 
 # Generate NativeLoader.java to load required shared libraries
@@ -260,28 +223,20 @@ else
 nativeloader_sharedlib=
 endif
 generate_loader_script:
-	 @echo "package com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME);\n\n\
+	@echo "package com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME);\n\n\
 	public class NativeLoader extends android.app.NativeActivity {\n\
 	  static {\n\
 	    $(nativeloader_sharedlib);\n\
 	    System.loadLibrary(\"$(PROJECT_LIBRARY_NAME)\");\n\
 	  }\n\
 	}\n" > $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo package com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME); > $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo. >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo public class NativeLoader extends android.app.NativeActivity { >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo     static { >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo         System.loadLibrary("$(PROJECT_LIBRARY_NAME)"); >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java 
-#	@echo     } >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-#	@echo } >> $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
-
 
 # Generate AndroidManifest.xml with all the required options
 # NOTE: Probably not the bet way to generate this file... but it works.
-# TODO jseb : replacing @drawable/icon with @mipmap/icon ?
+# TODO @jseb: Replace @drawable/icon with @mipmap/icon?
 # https://stackoverflow.com/questions/23796414/error-no-resource-found-that-matches-the-given-name-at-icon-with-value-dr
 generate_android_manifest:
-	 @echo "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n\
+	@echo "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n\
 	    	   <manifest xmlns:android=\"http://schemas.android.com/apk/res/android\"\n\
 		      package=\"com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME)\"\n\
 	              android:versionCode=\"$(APP_VERSION_CODE)\" android:versionName=\"$(APP_VERSION_NAME)\">\n\
@@ -302,41 +257,19 @@ generate_android_manifest:
 	           </application>\n\
 	         </manifest>" > $(PROJECT_BUILD_PATH)/AndroidManifest.xml
 
-#        @echo ^<?xml version="1.0" encoding="utf-8"^?^> > $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo ^<manifest xmlns:android="http://schemas.android.com/apk/res/android" >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo         package="com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME)"  >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo         android:versionCode="$(APP_VERSION_CODE)" android:versionName="$(APP_VERSION_NAME)" ^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo     ^<uses-sdk android:minSdkVersion="$(ANDROID_API_VERSION)" /^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo     ^<uses-feature android:glEsVersion="0x00020000" android:required="true" /^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo     ^<application android:allowBackup="false" android:label="@string/app_name" android:icon="@drawable/icon" ^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo         ^<activity android:name="com.$(APP_COMPANY_NAME).$(APP_PRODUCT_NAME).NativeLoader" >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             android:configChanges="orientation|keyboardHidden|screenSize" >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             android:screenOrientation="$(APP_SCREEN_ORIENTATION)" android:launchMode="singleTask" >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             android:clearTaskOnLaunch="true"^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             ^<meta-data android:name="android.app.lib_name" android:value="$(PROJECT_LIBRARY_NAME)" /^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             ^<intent-filter^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo                 ^<action android:name="android.intent.action.MAIN" /^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo                 ^<category android:name="android.intent.category.LAUNCHER" /^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo             ^</intent-filter^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo         ^</activity^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo     ^</application^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-#	@echo ^</manifest^> >> $(PROJECT_BUILD_PATH)/AndroidManifest.xml
-
 
 
 # Generate storekey for APK signing: $(PROJECT_NAME).keystore
 # NOTE: Configure here your Distinguished Names (-dname) if required!
 generate_apk_keystore: 
-#	if not exist $(PROJECT_BUILD_PATH)/$(PROJECT_NAME).keystore $(JAVA_BIN)keytool -genkeypair -validity 1000 -dname "CN=$(APP_COMPANY_NAME),O=Android,C=ES" -keystore $(PROJECT_BUILD_PATH)/$(PROJECT_NAME).keystore -storepass $(APP_KEYSTORE_PASS) -keypass $(APP_KEYSTORE_PASS) -alias $(PROJECT_NAME)Key -keyalg RSA
-# infos sur keytools ici: https://coderwall.com/p/r09hoq/android-generate-release-debug-keystores
-#	keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000
+# NOTE: https://coderwall.com/p/r09hoq/android-generate-release-debug-keystores
+# keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000
 	@if [ -s $(PROJECT_BUILD_PATH)/$(PROJECT_NAME).keystore ]; then \
 	       echo " [*] $(PROJECT_NAME).keystore already exists."; \
-	    else \
+	else \
 	       echo " [*] $(PROJECT_NAME).keystore : generating now."; \
 	       $(JAVA_BIN)keytool -genkeypair -validity 1000 -dname "CN=$(APP_COMPANY_NAME),O=Android,C=ES" -keystore $(PROJECT_BUILD_PATH)/$(PROJECT_NAME).keystore -storepass $(APP_KEYSTORE_PASS) -keypass $(APP_KEYSTORE_PASS) -alias $(PROJECT_NAME)Key -keyalg RSA; \
-	 fi 
+	fi 
 
 # Config project package and resource using AndroidManifest.xml and res/values/strings.xml
 # NOTE: Generates resources file: src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/R.java
@@ -345,7 +278,7 @@ config_project_package:
 
 # Compile native_app_glue code as static library: obj/libnative_app_glue.a
 compile_native_app_glue:
-	$(CC) -c $(NATIVE_APP_GLUE)/android_native_app_glue.c -o $(PROJECT_BUILD_PATH)/obj/native_app_glue.o $(CFLAGS)
+	$(CC) -c $(NATIVE_APP_GLUE_PATH)/android_native_app_glue.c -o $(PROJECT_BUILD_PATH)/obj/native_app_glue.o $(CFLAGS)
 	$(AR) rcs $(PROJECT_BUILD_PATH)/obj/libnative_app_glue.a $(PROJECT_BUILD_PATH)/obj/native_app_glue.o
 
 # Compile project code into a shared library: lib/lib$(PROJECT_LIBRARY_NAME).so 
@@ -358,7 +291,6 @@ $(PROJECT_BUILD_PATH)/obj/%.o:%.c
 	$(CC) -c $^ -o $@ $(INCLUDE_PATHS) $(CFLAGS) --sysroot=$(ANDROID_TOOLCHAIN)/sysroot 
     
 # Compile project .java code into .class (Java bytecode) 
-# pour Unix, le séparateur pour les chemins indiqués dans -cp (-classpath) est ':' (pour windows: ';')
 compile_project_class:
 	$(JAVA_BIN)javac -verbose -source 1.7 -target 1.7 -d $(PROJECT_BUILD_PATH)/obj -bootclasspath $(JAVA_HOME)/jre/lib/rt.jar -classpath $(ANDROID_HOME)/platforms/android-$(ANDROID_API_VERSION)/android.jar:$(PROJECT_BUILD_PATH)/obj -sourcepath $(PROJECT_BUILD_PATH)/src $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/R.java $(PROJECT_BUILD_PATH)/src/com/$(APP_COMPANY_NAME)/$(APP_PRODUCT_NAME)/NativeLoader.java
 
@@ -408,7 +340,7 @@ deploy:
 
 #$(ANDROID_PLATFORM_TOOLS)/adb logcat *:W
 
-# [JSEB] Clean everything, but avoid accidental removing of root dir, or $HOME, or whatever important
+# @jseb: Clean everything, but avoid accidental removing of root dir, or $HOME, or whatever important
 clean:
 	@if [ "$(shell echo $(PROJECT_BUILD_PATH) | grep "$(PROJECT_BUILD_ID)")" != "" ]; then \
 	  rm -rf $(PROJECT_BUILD_PATH); \
